--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#34495e</color>
     <color name="colorPrimaryDark">#2c3e50</color>
     <color name="colorAccent">#95a5a6</color>
+    <color name="selected">#E8EAF6</color>
+    <color name="unselected">#E0F2F1</color>
 </resources>
